--- a/nutrition.html
+++ b/nutrition.html
@@ -6,45 +6,14 @@
   <title>Nutrition Tracker | Astronaut Fitness Tracker</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
-  <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-  <!-- Particles.js Script -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
-  <!-- Particles Background -->
-  <div id="particles-js"></div>
-
   <nav class="tabbar">
-    <a class="tab-link" href="today.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"></path>
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"></path>
-      </svg>
-      <span>Today</span>
-    </a>
-    <a class="tab-link" href="week.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-      </svg>
-      <span>Week</span>
-    </a>
-    <a class="tab-link" href="exercises.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
-      </svg>
-      <span>Exercises</span>
-    </a>
-    <a class="tab-link" href="stats.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
-      </svg>
-      <span>Stats</span>
-    </a>
-    <a class="tab-link" href="achievements.html">
-      <img src="trophy.png" alt="Trophy Icon" class="trophy-icon">
-      <span>Achievements</span>
-    </a>
+    <a class="tab-link" href="today.html">Today</a>
+    <a class="tab-link" href="week.html">Week</a>
+    <a class="tab-link" href="nutrition.html">Nutrition</a>
+    <a class="tab-link" href="exercises.html">Exercises</a>
   </nav>
 
   <div class="content">
@@ -55,14 +24,14 @@
     <main>
       <section>
         <h2>Search for Food</h2>
-        <input type="text" id="foodSearch" placeholder="Search for food...">
+        <input type="text" id="foodSearch" placeholder="Search food...">
         <button id="searchBtn">Search</button>
       </section>
 
       <section id="foodListSection" style="display: none;">
         <h2>Select Food and Servings</h2>
         <ul id="foodList"></ul>
-        <input type="number" id="foodServings" placeholder="Number of servings" min="1">
+        <input type="number" id="foodServings" placeholder="Number of servings" min="1" />
         <button id="logFoodBtn">Log Food</button>
       </section>
 
@@ -84,14 +53,16 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
   <script>
     const API_URL = 'https://api.edamam.com/api/food-database/v2/parser';
-    const API_KEY = 'a00e1fa1cfc5ab2e105d054726b5b874'; // Your provided API key
-    const APP_ID = 'deeb16df'; // Your provided app ID
+    const API_KEY = 'a00e1fa1cfc5ab2e105d054726b5b874'; // Provided API key
+    const APP_ID = 'deeb16df'; // Provided application ID
 
     // DOM Elements
     const searchBtn = document.getElementById('searchBtn');
     const foodSearch = document.getElementById('foodSearch');
+
     const foodListSection = document.getElementById('foodListSection');
     const foodList = document.getElementById('foodList');
     const foodServings = document.getElementById('foodServings');
@@ -103,7 +74,6 @@
     const fat = document.getElementById('fat');
     const carbs = document.getElementById('carbs');
     const servingSize = document.getElementById('servingSize');
-    const foodChartSection = document.getElementById('foodChartSection');
 
     const loggedFoods = [];
 
@@ -115,98 +85,80 @@
       }
     });
 
-    // Fetch food data from API
+    // Fetch food data from API with error handling and response check
     async function fetchFoodData(query) {
-      const response = await fetch(`${API_URL}?app_id=${APP_ID}&app_key=${API_KEY}&ingr=${query}`);
-      const data = await response.json();
-      displayFoodList(data.hints);
+      try {
+        const response = await fetch(`${API_URL}?app_id=${APP_ID}&app_key=${API_KEY}&ingr=${query}`);
+        
+        if (!response.ok) {
+          throw new Error(`API request failed with status: ${response.status}`);
+        }
+
+        const data = await response.json();
+        console.log(data); // Log the response data to check structure
+        if (data.hints && data.hints.length > 0) {
+          displayFoodList(data.hints);
+        } else {
+          alert('No food items found.');
+        }
+      } catch (error) {
+        console.error('Error fetching data:', error);
+        alert('There was an error fetching the food data. Please try again.');
+      }
     }
 
-    // Display food list
+    // Display food list from API response
     function displayFoodList(foodItems) {
       foodListSection.style.display = 'block';
-      foodList.innerHTML = ''; // Clear previous list
+      foodList.innerHTML = '';
       foodItems.forEach(item => {
         const foodItem = document.createElement('li');
         foodItem.innerHTML = `
           <span>${item.food.label}</span>
-          <button onclick="selectFood(${JSON.stringify(item.food.nutrients)})">Select</button>
+          <button onclick="selectFood(${JSON.stringify(item.food.nutrients)}, '${item.food.label}')">Select</button>
         `;
         foodList.appendChild(foodItem);
       });
     }
 
-    // Select a food and show its nutrition details
-    function selectFood(nutrients) {
-      foodListSection.style.display = 'none';
+    // Select food and display nutrition details
+    function selectFood(nutrients, name) {
+      foodName.textContent = name;
+      calories.textContent = nutrients.ENERC_KCAL;
+      protein.textContent = nutrients.PROCNT;
+      fat.textContent = nutrients.FAT;
+      carbs.textContent = nutrients.CHOCDF;
+      servingSize.textContent = '1 serving';
       nutritionDetails.style.display = 'block';
-      foodName.innerText = 'Food Selected';
-      calories.innerText = nutrients.ENERC_KCAL;
-      protein.innerText = nutrients.PROCNT;
-      fat.innerText = nutrients.FAT;
-      carbs.innerText = nutrients.CHOCDF;
-      servingSize.innerText = '1 serving (100g)';
+
+      // Log food to chart
+      logFoodBtn.onclick = () => {
+        const servings = foodServings.value || 1;
+        loggedFoods.push({
+          name: name,
+          calories: nutrients.ENERC_KCAL * servings,
+          protein: nutrients.PROCNT * servings,
+          fat: nutrients.FAT * servings,
+          carbs: nutrients.CHOCDF * servings,
+        });
+        renderChart();
+      };
     }
 
-    // Log food
-    logFoodBtn.addEventListener('click', () => {
-      const servings = foodServings.value || 1;
-      loggedFoods.push({
-        name: foodName.innerText,
-        calories: parseFloat(calories.innerText) * servings,
-        protein: parseFloat(protein.innerText) * servings,
-        fat: parseFloat(fat.innerText) * servings,
-        carbs: parseFloat(carbs.innerText) * servings,
-      });
-      updateFoodChart();
-    });
-
-    // Update food chart
-    function updateFoodChart() {
-      const labels = loggedFoods.map(food => food.name);
-      const caloriesData = loggedFoods.map(food => food.calories);
-      const proteinData = loggedFoods.map(food => food.protein);
-      const fatData = loggedFoods.map(food => food.fat);
-      const carbsData = loggedFoods.map(food => food.carbs);
-
+    // Render chart with logged foods
+    function renderChart() {
       const ctx = document.getElementById('foodChart').getContext('2d');
+      const foodData = loggedFoods.map(food => ({
+        label: food.name,
+        data: [food.calories, food.protein, food.fat, food.carbs],
+      }));
       const chart = new Chart(ctx, {
         type: 'bar',
         data: {
-          labels: labels,
-          datasets: [
-            {
-              label: 'Calories (kcal)',
-              data: caloriesData,
-              backgroundColor: 'rgba(255, 99, 132, 0.2)',
-              borderColor: 'rgba(255, 99, 132, 1)',
-              borderWidth: 1
-            },
-            {
-              label: 'Protein (g)',
-              data: proteinData,
-              backgroundColor: 'rgba(54, 162, 235, 0.2)',
-              borderColor: 'rgba(54, 162, 235, 1)',
-              borderWidth: 1
-            },
-            {
-              label: 'Fat (g)',
-              data: fatData,
-              backgroundColor: 'rgba(255, 159, 64, 0.2)',
-              borderColor: 'rgba(255, 159, 64, 1)',
-              borderWidth: 1
-            },
-            {
-              label: 'Carbs (g)',
-              data: carbsData,
-              backgroundColor: 'rgba(75, 192, 192, 0.2)',
-              borderColor: 'rgba(75, 192, 192, 1)',
-              borderWidth: 1
-            },
-          ]
+          labels: ['Calories', 'Protein', 'Fat', 'Carbs'],
+          datasets: foodData,
         },
         options: {
-          responsive: true,
           scales: {
             y: {
               beginAtZero: true
@@ -215,79 +167,6 @@
         }
       });
     }
-  </script>
-
-  <!-- Particles.js Initialization -->
-  <script>
-    particlesJS('particles-js', {
-      "particles": {
-        "number": {
-          "value": 80,  // Number of particles
-          "density": {
-            "enable": true,
-            "value_area": 800
-          }
-        },
-        "color": {
-          "value": "#ffffff"  // Color of particles
-        },
-        "shape": {
-          "type": "circle",  // Shape of particles
-          "stroke": {
-            "width": 0,
-            "color": "#000000"
-          }
-        },
-        "opacity": {
-          "value": 0.5,
-          "random": true,
-          "anim": {
-            "enable": true,
-            "speed": 1,
-            "opacity_min": 0.1,
-            "sync": false
-          }
-        },
-        "size": {
-          "value": 3,
-          "random": true,
-          "anim": {
-            "enable": true,
-            "speed": 4,
-            "size_min": 0.1,
-            "sync": false
-          }
-        },
-        "move": {
-          "enable": true,
-          "speed": 2,
-          "direction": "none",
-          "random": true,
-          "straight": false,
-          "out_mode": "out",
-          "bounce": false,
-          "attract": {
-            "enable": false,
-            "rotateX": 600,
-            "rotateY": 1200
-          }
-        }
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": {
-            "enable": true,
-            "mode": "repulse"
-          },
-          "onclick": {
-            "enable": true,
-            "mode": "push"
-          }
-        }
-      },
-      "retina_detect": true
-    });
   </script>
 </body>
 </html>
