--- a/nutrition.html
+++ b/nutrition.html
@@ -53,16 +53,14 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
   <script>
     const API_URL = 'https://api.edamam.com/api/food-database/v2/parser';
-    const API_KEY = 'a00e1fa1cfc5ab2e105d054726b5b874'; // Provided API key
-    const APP_ID = 'deeb16df'; // Provided application ID
+    const API_KEY = 'c85342f02e2ce14196c6818dc0ec0d11'; // New API Key
+    const APP_ID = 'b0c02042'; // New Application ID
 
     // DOM Elements
     const searchBtn = document.getElementById('searchBtn');
     const foodSearch = document.getElementById('foodSearch');
-
     const foodListSection = document.getElementById('foodListSection');
     const foodList = document.getElementById('foodList');
     const foodServings = document.getElementById('foodServings');
@@ -74,6 +72,7 @@
     const fat = document.getElementById('fat');
     const carbs = document.getElementById('carbs');
     const servingSize = document.getElementById('servingSize');
+    const foodChartSection = document.getElementById('foodChartSection');
 
     const loggedFoods = [];
 
@@ -85,29 +84,21 @@
       }
     });
 
-    // Fetch food data from API with error handling and response check
+    // Fetch food data from API
     async function fetchFoodData(query) {
-      try {
-        const response = await fetch(`${API_URL}?app_id=${APP_ID}&app_key=${API_KEY}&ingr=${query}`);
-        
-        if (!response.ok) {
-          throw new Error(`API request failed with status: ${response.status}`);
-        }
+      const response = await fetch(`${API_URL}?app_id=${APP_ID}&app_key=${API_KEY}&ingr=${query}`);
+      const data = await response.json();
 
-        const data = await response.json();
-        console.log(data); // Log the response data to check structure
-        if (data.hints && data.hints.length > 0) {
-          displayFoodList(data.hints);
-        } else {
-          alert('No food items found.');
-        }
-      } catch (error) {
-        console.error('Error fetching data:', error);
-        alert('There was an error fetching the food data. Please try again.');
+      // Check if the API call was successful and food items are found
+      if (data.hints) {
+        displayFoodList(data.hints);
+      } else {
+        console.error('Error fetching data:', data);
+        alert('Error fetching food data. Please try again.');
       }
     }
 
-    // Display food list from API response
+    // Display food list
     function displayFoodList(foodItems) {
       foodListSection.style.display = 'block';
       foodList.innerHTML = '';
